# uk-property-api

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  add_new_domains.py  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  server.json  smithery.yaml
app/: bazaar.py  config.py  main.py  mcp_server.py
app/middleware/: cache.py  fix_verify.py  payment.py  rate_limiter.py
app/models/: schemas.py
app/routes/: companies.py  council_tax.py  crime.py  epc.py  finance.py  flood_risk.py  planning.py  sold_prices.py  stamp_duty.py  vehicle.py  weather.py  yield_estimate.py
app/services/: companies_house.py  council_tax.py  crime.py  epc.py  finance.py  flood_risk.py  land_registry.py  planning.py  sdlt.py  vehicle.py  voa_rental.py  weather.py
tests/: test_council_tax.py  test_new_services.py  test_sdlt.py  test_yield.py
